# ouroboros

./: .gitignore  ADMIN_OPERATIONS_GUIDE.md  API_DOCUMENTATION.md  COMMANDS.md  CONTRACT_TESTING_GUIDE.md  DEVELOPER_GUIDE.md  FRAUD_PROOF_SYSTEM.md  GCP_DEPLOYMENT_GUIDE.md  GOVERNANCE_GUIDE.md  INTEGRATION_GUIDE.md  JOIN.md  NETWORK_INFO.md  NEXT_STEPS.md  P2P_TLS_SETUP_GUIDE.md  PEER_CONNECTION_FIX.md  PEER_CONNECTION_FIX_TEST_REPORT.md  POSTGRESQL_TO_ROCKSDB_CONVERSION_STATUS.md  README.md  RELEASE_NOTES_v0.2.1.md  RELEASE_NOTES_v0.3.0.md  REWARDS_GUIDE.md  SESSION_PROGRESS_SUMMARY.md  TESTING_GUIDE.md  V0.3.0_ROADMAP.md  docker-compose.test.yml  docker-compose.yml  fix_service.sh  fix_service_and_migrate.sh  index.html  install-ourod.sh  install_repo.sh  join_ouroboros.ps1  join_ouroboros.sh  join_ouroboros_improved.ps1  ql host=127.0.0.1 port=15432 dbname=ouro_db user=ouro password=ouro_pass -c   remove_all_postgres.py  remove_postgres_lib.py  vm-setup.sh
.claude/: settings.local.json
.github/workflows/: build-release.yml  ci.yml  release.yml
backups/: pg_dump_2025-08-28_1429.sql  pg_dump_2025-08-28_1441.sql  pg_dump_2025-08-29_0823.sql
contract_templates/nft/: Cargo.toml
contract_templates/nft/src/: lib.rs
contract_templates/token/: Cargo.toml  README.md
contract_templates/token/src/: lib.rs
deploy/: gcp-deploy.sh  nginx.conf
examples/: fraud_detection_demo.rs
k8s/: README.md  deployment.yaml  ingress.yaml  postgres.yaml  secrets.example.yaml
midgard_wallet/: COMPATIBILITY_UPDATE.md  Cargo.toml  README.md
midgard_wallet/src/: client.rs  main.rs  wallet.rs
ouro_dag/: .dockerignore  .env.example  Cargo.toml  Dockerfile  dag_state.json  docker-build-steps.txt  docker-compose.yml  fraud_detection.toml  keygen.py  ouro-node.service  sign_and_submit.py
ouro_dag/.cargo/: config.toml
ouro_dag/.sqlx/: query-002a32127370ae1b5d6f6b325c92c572a344e78b1fbf019d032afe27e346f2fa.json  query-1bc8ed1d506c2aa784be059ab7c32326a312172250c40da06dd7ea81641f34a2.json  query-289657a16c2e97653790fc75877a01e035695bd078979eaee9d92ce68056ec1e.json  query-2e62bd9d26561ba7639070a0507dee4ed2d1c3b997681eccde44ab3990a1302e.json  query-5ddd8bef9df95b213f57cf3f13e27f51bf74d0eee32dd81aa1082af6b08d5570.json  query-6a7001322ad3b611e62574b3f4e23bb3ef073b409f3464a57091d40b758b7e0d.json  query-c56abe49c3c800a052fc3b73a92ccfd830bc4799f17ea7665811e53f2e4bb609.json  query-d564edf3dfa9f832cd1fb51ee9ed96a3b17b9ec09cfeed4427a7fe841f2850e1.json  query-ea25f50d7b76682a710b763185837a2f82102f7a69752dfa00cb1b208ad244df.json  query-ef71e096e0c7d3f2183b9e3429f8db78f8126270acd49891f88c19bd7f31f230.json  query-fc0afc2ec15d4b9116f7ad602c9ad6104ef279064afce9c57ae4e9d0d45b3a19.json
ouro_dag/backups/: pg_dump_2025-08-29_0823.sql
ouro_dag/cli/: dag_explorer.rs
ouro_dag/migrations/: 0001_create_chain_schema.sql  0002_add_idempotency_and_nonce.sql  0003_create_evidence_table.sql  0004_create_mempool_table.sql  0005_create_sbt_table.sql  0006_create_block_and_index.sql  0007_align_schema.sql  0008_update_evidence_constraints.sql  0009_create_bft_meta.sql  0010_create_subchain_and_micro_tables.sql  0011_microchain_and_anchor_tables.sql  0012_provisional_and_main_anchors.sql  0013_escrow_balances.sql  0014_provisional_balances.sql  0015_add_serialized_leaves_ref_to_subchain_batches.sql  0016_add_posted_at_to_subchain_batches.sql  0017_add_verified_and_main_tx_to_subchain_batches.sql  0018_create_main_anchors.sql  0019_create_provisional_claims.sql  0020_create_subchains_and_microchains.sql  0021_create_provisional_balances.sql  0022_add_serialized_leaves_ref_index.sql  0023_create_balances_table.sql  0024_add_batch_root_to_provisional_claims.sql  0026_poster_idempotency_consolidated.sql  0027_add_next_retry_col.sql  0028_add_blocks_payload.sql  0029_create_ouro_coin_tables.sql  0031_add_ouro_nonces_and_security.sql  0032_add_multisig_to_anchors.sql  0033_create_validator_registry.sql  0034_create_aggregator_attestations.sql  0035_create_fraud_proofs.sql  0036_create_node_metrics.sql  0036_create_subchain_registry.sql  0037_add_balance_constraints.sql  0038_create_slashing_tables.sql  0039_create_key_rotations_table.sql  MIGRATION_ORDER.md
ouro_dag/ops/: backup_postgres.sh  dr_playbook.md  restore_postgres.sh  snapshot_rocksdb.sh  wait-for-db-and-migrate.sh  wait-for-db-and-start.sh
ouro_dag/scripts/: bootstrap.txt  install-ourod.sh  integration_test.sh  run_migrations.sh
ouro_dag/src/: anchor_service.rs  api.rs  auto_update.rs  batch_writer.rs  bootstrap-server.rs  bootstrap_server_simple.py  config.rs  crypto.rs  keymgmt.rs  keys.rs  lib.rs  mempool.rs  merkle.rs  network.rs  node_identity.rs  node_metrics.rs  reconciliation.rs  sled_storage.rs  storage.rs  tcp-proxy.rs  tcp_relay.py  vm.rs  wallet_link.rs  webhook_worker.rs
ouro_dag/src/bft/: block.rs  consensus.rs  mod.rs  state.rs
ouro_dag/src/cargo/: config.toml
ouro_dag/src/dag/: dag.rs  transaction.rs  validation.rs
ouro_dag/src/network/: handshake.rs
ouro_dag/src/storage/: mod.rs  postgres.rs  rocksdb_store.rs
ouro_dag/tests/: consensus.rs  contract_deployment.rs  crypto_keys.rs  crypto_tests.rs  db_smoke.rs  gas_analysis.rs  handshake_inproc.rs  hotstuff_test.rs  merkle.rs  merkle_helper.rs  microstore.rs  multi_contract_interaction.rs  nft_contract_tests.rs  p2p_handshake_and_relay.rs  performance_benchmarks.rs  security_integration_tests.rs  substore.rs  token_contract_tests.rs  vm_determinism.rs
ouro_sdk/: README.md
ouro_sdk/examples/: advanced_microchain.rs  basic_microchain.rs  builder_pattern.rs  client_usage.rs  complete_dapp.rs
ouro_sdk/src/: client.rs  lib.rs  microchain.rs  transaction.rs
ouro_sdk_js/: README.md
ouro_sdk_js/src/: index.ts
ouro_sdk_python/: README.md
ouro_sdk_python/examples/: advanced_microchain.py  (+3 more)
ouro_wallet/: crypto_utils.py  main.py  models.py  services.py  storage.py
ouro_wallet_ui/: README.md  index.html  package.json
ouro_wallet_ui/src-tauri/: Cargo.toml  tauri.conf.json
ouro_wallet_ui/src-tauri/src/: commands.rs  main.rs  wallet.rs
src/: App.tsx
tests/: api_smoke.rs
(+20 files in other folders)
