[package]
name = "ouro_dag"
version = "0.1.0"
edition = "2021"

[dependencies]
# crypto / signing - use v1.x API compatible with PublicKey/Signature::from_bytes
ed25519-dalek = "1.0"

# serialization / ids / time
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.4", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }

# misc utils
hex = "0.4"
sha2 = "0.10"
log = "0.4"
env_logger = "0.10"

# async runtime
tokio = { version = "1.28", features = ["full"] }

# web / networking
actix-web = "4"
axum = "0.6"
tracing = "0.1"
reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"] }

# embedded / light DB (default storage)
sled = "0.34"

# optional native RocksDB: enable only when you have the native toolchain/libs.
rocksdb = { version = "0.20", optional = true }

# helpers
num_cpus = "1.13"
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-native-tls", "macros", "uuid", "time"] }
thiserror = "1.0"
anyhow = "1.0"

# randomness
rand = "0.7"

# dotenv loader for local dev
dotenvy = "0.15"

# CLI
clap = { version = "4.2", features = ["derive"] }
yansi = "0.5"

[features]
default = []
with_rocksdb = ["rocksdb"]

[dev-dependencies]
rand_core = "0.5"
tempfile = "3.6"