[package]
name = "ouro-nft-template"
version = "0.1.0"
edition = "2021"
authors = ["Ouroboros Contributors"]
description = "ERC721-like NFT contract template for Ouroboros VM"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
