[package]
name = "ouro-wallet-ui"
version = "0.3.0"
description = "Ouroboros Wallet Desktop Application"
authors = ["Ouroboros Network"]
license = "MIT"
repository = "https://github.com/ouroboros-network/ouroboros"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Wallet dependencies
ed25519-dalek = "2.1"
bip39 = "2.0"
sha2 = "0.10"
hex = "0.4"
bech32 = "0.11"
rand = "0.8"

# HTTP client
reqwest = { version = "0.12", features = ["json", "blocking"] }

# Async
tokio = { version = "1.40", features = ["full"] }

# Storage
sled = "0.34"
aes-gcm = "0.10"

# Utilities
uuid = { version = "1.10", features = ["v4"] }
chrono = "0.4"

[features]
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(windows)'.dependencies]
windows = { version = "0.51", features = ["Win32_System_Console"] }
